First actual content.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-    <h1>@owickstrom</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>@owickstrom</title>
+        <link href='http://fonts.googleapis.com/css?family=Cardo:400,700,400italic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
+        <link rel="stylesheet" href="main.css">
+    </head>
+    <body>
+        <h1>@owickstrom</h1>
+        <p>Software developer at Jayway residing in southern Sweden. I like programming languages, designing user interfaces and playing blues and rock guitar.</p>
+
+
+        <p class="navigation">
+        Check out my 
+        <a href="https://twitter.com/owickstrom">Twitter</a>,
+        <a href="https://github.com/owickstrom">GitHub</a>,
+        <a href="https://bitbucket.org/owickstrom">Bitbucket</a> and
+        <a href="http://www.jayway.com/author/oskarwickstrom/">blog posts</a>.
+        Listen at <a href="https://soundcloud.com/oskar-wickstrom">SoundCloud</a>.
+        </p>
+    </body>
 </html>
