--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>@owickstrom</h1>
-        <p>Software developer at Jayway residing in southern Sweden. I like programming languages, designing user interfaces and playing blues and rock guitar.</p>
+        <p>Software developer at <a href="http://www.jayway.com">Jayway</a> residing in southern Sweden. I like programming languages, designing user interfaces and playing blues and rock guitar.</p>
 
 
         <p class="navigation">
@@ -20,5 +20,16 @@
         <a href="http://www.jayway.com/author/oskarwickstrom/">blog posts</a>.
         Listen at <a href="https://soundcloud.com/oskar-wickstrom">SoundCloud</a>.
         </p>
+
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+                    ga('create', 'UA-42197774-2', 'owickstrom.github.io');
+                    ga('send', 'pageview');
+
+        </script>
     </body>
 </html>
