--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     </head>
     <body>
         <h1>@owickstrom</h1>
-        <p>Software developer at <a href="http://www.jayway.com">Jayway</a> residing in southern Sweden. I like programming languages, designing user interfaces and playing blues and rock guitar.</p>
-
+        <p>I'm Oskar Wickström, a software developer at <a href="http://www.jayway.com">Jayway</a>. Programming languages, system architecture and user interface design are things that interests me.</p>
+        
+        <p>In my spare time I usually end up playing blues guitar.</p>
 
         <p class="navigation">
         Check out my 
