Update after leaving jayway

--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
     <head>
         <meta charset="UTF-8">
         <title>@owickstrom</title>
-        <link href='//fonts.googleapis.com/css?family=Cardo:400,700,400italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
+        <link href="//fonts.googleapis.com/css?family=Cardo:400,700,400italic" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <h1>@owickstrom</h1>
-        <p>I'm Oskar Wickström, a software developer at <a href="http://www.jayway.com">Jayway</a>. Programming languages, system architecture and user interface design are things that interests me.</p>
+        <p>Hi! My name is Oskar Wickström.</p>
 
-        <p>In my spare time I usually end up playing bass or guitar while I'm not
-        hacking on <a href="https://owickstrom.github.io/kashmir/">programming languages</a>.</p>
+        <p>
+        I&#39;m primarily into programming and
+        music, playing electric bass and <a
+        href="http://oden-lang.org">hacking on programming languages</a>.
+        </p>
 
         <p class="navigation">
         Check out my
-        <a href="https://twitter.com/owickstrom">Twitter</a>,
-        <a href="https://github.com/owickstrom">GitHub</a>,
-        <a href="https://bitbucket.org/owickstrom">Bitbucket</a> and
-        <a href="http://www.jayway.com/author/oskarwickstrom/">blog posts</a>.
-        Listen at <a href="https://soundcloud.com/oskar-wickstrom">SoundCloud</a>.
+        <a href="https://twitter.com/owickstrom">Twitter</a> and
+        <a href="https://github.com/owickstrom">GitHub</a> for programming
+        stuff.
+        Listen at <a href="https://soundcloud.com/oskar-wickstrom">SoundCloud</a>
+        and <a href="https://www.youtube.com/channel/UC1edduMaIVhvx8Y3btQcQuw">YouTube</a>.
         </p>
 
         <script>
