--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="initial-scale=1.0,width=device-width">
         <title>@owickstrom</title>
-        <link href="//fonts.googleapis.com/css?family=Cardo:400,700,400italic" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
@@ -11,16 +11,16 @@
         <p>Hi! My name is Oskar Wickström.</p>
 
         <p>
-        I&#39;m primarily into programming and
-        music, playing electric bass and <a
-        href="http://oden-lang.org">hacking on programming languages</a>.
+        I&#39;m into music and programming &mdash; playing
+        electric bass and <a
+        href="http://oden-lang.org">hacking on programming
+        languages</a>.
         </p>
 
         <p class="navigation">
         Check out my
         <a href="https://twitter.com/owickstrom">Twitter</a> and
-        <a href="https://github.com/owickstrom">GitHub</a> for programming
-        stuff.
+        <a href="https://github.com/owickstrom">GitHub</a>.
         Listen at <a href="https://soundcloud.com/oskar-wickstrom">SoundCloud</a>
         and <a href="https://www.youtube.com/channel/UC1edduMaIVhvx8Y3btQcQuw">YouTube</a>.
         </p>
