--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
         <p>Hi! My name is Oskar Wickström.</p>
 
         <p>
-        I&#39;m into music and programming &mdash; playing
-        electric bass and <a
-        href="http://oden-lang.org">hacking on programming
-        languages</a>.
+        I&#39;m into music, programming and open source software. My current
+        programming project is <a href="http://oden-lang.org">The Oden
+        Programming Language</a>.
         </p>
 
         <p class="navigation">
