Change design to sans-serif based

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
       <div class="about-me">
         <p>
         My name is Oskar Wickström and this is where I write about functional
-        programming, open source software and my main project <a
+        programming, open source software and <a
           href="http://oden-lang.org">The Oden Programming
         Language</a>.
         You can find me at
