--- a/src/archive.html
+++ b/src/archive.html
@@ -13,7 +13,7 @@ layout: page
       {% assign category = post.categories | first %}
       {% if category %}
       <span class="category">
-        In <a href="/{{category}}">{{category | replace: '-', ' ' }}</a>
+        In <a href="{{ site.baseurl }}/{{ category }}">{{category | replace: '-', ' ' }}</a>
       </span>
       {% endif %}
     </div>
