Add portfolio screenshots

--- a/src/work.html
+++ b/src/work.html
@@ -12,9 +12,37 @@ statically typed functional programming language.
 </p>
 
 <p>
-Feel free to contact me using the form below, and I'll get back to you as soon
-as possible. You can also <a href="https://wickstrom.tech/cv.pdf">download my CV here</a>.
-</p>
+Feel free to contact me using the form in the bottom of this page, and
+I'll get back to you as soon as possible. You can also <a
+href="https://wickstrom.tech/cv.pdf">download my CV here</a>.  </p>
+
+<h2>Portfolio</h2>
+
+<p>Here follows some screenshots from sites and products I have been involved
+in doing UI work on. While functional programming and web development are my
+main strengths, CSS and design is something I have been doing throughout my
+career, and still enjoy doing.</p>
+
+<figure>
+  <img src="/work/hyper-docs.png" alt="Hyper documentation">
+  <figcaption>The <a href="http://hyper.wickstrom.tech">documentation for
+      Hyper</a> is built using the Sphinx documentation toolchain, and a custom
+    theme that I have made.
+  </figcaption>
+</figure>
+
+<figure class="two-images">
+  <img src="/work/codescene-1.png" alt="CodeScene landing page">
+  <img src="/work/codescene-2.png" alt="CodeScene visualization">
+  <figcaption>I did a lot of UI work on <a href="https://codescene.io">codescene.io</a> at Empear.</figcaption>
+</figure>
+
+<figure>
+  <img src="/work/empear.com.png" alt="empear.com">
+  <figcaption>The <a href="http://www.empear.com">empear.com</a> site has a custom theme I made, using the static site generator Hugo.</figcaption>
+</figure>
+
+<h2>Contact Me</h2>
 
 <form action="https://formspree.io/oskar.wickstrom@gmail.com" method="POST" class="contact-form">
   <input type="hidden" value="https://wickstrom.tech/work.html" name="_next">
