--- a/src/work.html
+++ b/src/work.html
@@ -7,8 +7,8 @@ title: "Work"
 From the summer of 2017, I'll be available for remote work, or on-site in the
 Malmö and Copenhagen region. Both contracting or employment can be of interest.
 My strengths are functional programming and web development, and I am
-specifically interested in working with Haskell, PureScript, or some other
-statically typed functional programming language.
+specifically interested in working with Haskell, PureScript, and related
+statically typed functional programming languages.
 </p>
 
 <p>
