Remove form and stuff

--- a/src/work.html
+++ b/src/work.html
@@ -4,17 +4,14 @@ title: "Work"
 ---
 
 <p>
-From the summer of 2017, I'll be available for remote work, or on-site in the
-Malmö and Copenhagen region. Both contracting or employment can be of interest.
 My strengths are functional programming and web development, and I am
 specifically interested in working with Haskell, PureScript, and related
-statically typed functional programming languages.
+statically typed functional programming languages. You can <a
+href="https://wickstrom.tech/cv.pdf">download my CV here</a>.
 </p>
 
-<p>
-Feel free to contact me using the form in the bottom of this page, and
-I'll get back to you as soon as possible. You can also <a
-href="https://wickstrom.tech/cv.pdf">download my CV here</a>.  </p>
+<p>As of July, 2017, I'll be employed by Mpowered Business Solutions,
+writing Haskell remotely. I'm very excited for this!</p>
 
 <h2>Portfolio</h2>
 
@@ -41,33 +38,3 @@ career, and still enjoy doing.</p>
   <img src="/work/empear.com.png" alt="empear.com">
   <figcaption>The <a href="http://www.empear.com">empear.com</a> site has a custom theme I made, using the static site generator Hugo.</figcaption>
 </figure>
-
-<h2>Contact Me</h2>
-
-<form action="https://formspree.io/oskar.wickstrom@gmail.com" method="POST" class="contact-form">
-  <input type="hidden" value="https://wickstrom.tech/work.html" name="_next">
-  <input type="text" name="_gotcha" style="display:none" />
-  <div class="form-row">
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" required placeholder="Your name">
-  </div>
-  <div class="form-row">
-    <label for="email">Email</label>
-    <input type="email" id="email" required name="_replyto" placeholder="Your email">
-  </div>
-  <div class="form-row">
-    <label for="inquiry">Inquiry</label>
-    <select id="inquiry" name="inquiry">
-      <option value="contracting">Contracting</option>
-      <option value="employment">Employment</option>
-      <option value="other">Other</option>
-    </select>
-  </div>
-  <div class="form-row">
-    <label for="message">Message</label>
-    <textarea id="message" name="message" placeholder="Your message..." rows="5"></textarea>
-  </div>
-  <div class="form-row">
-    <input type="submit" value="Send">
-  </div>
-</form>
