New design and no google fonts

--- a/src/work.html
+++ b/src/work.html
@@ -4,37 +4,8 @@ title: "Work"
 ---
 
 <p>
-My strengths are functional programming and web development, and I am
-specifically interested in working with Haskell, PureScript, and related
-statically typed functional programming languages. You can <a
-href="https://wickstrom.tech/cv.pdf">download my CV here</a>.
+My strengths and interests are system design, testable and
+maintainable architectures, property-based and model-based testing
+techniques, functional programming, and technical documentation. You
+can <a href="https://wickstrom.tech/cv.pdf">download my CV here</a>.
 </p>
-
-<p>As of July, 2017, I'll be employed by Mpowered Business Solutions,
-writing Haskell remotely. I'm very excited for this!</p>
-
-<h2>Portfolio</h2>
-
-<p>Here follows some screenshots from sites and products I have been involved
-in doing UI work on. While functional programming and web development are my
-main strengths, CSS and design is something I have been doing throughout my
-career, and still enjoy doing.</p>
-
-<figure>
-  <img src="/work/hyper-docs.png" alt="Hyper documentation">
-  <figcaption>The <a href="http://hyper.wickstrom.tech">documentation for
-      Hyper</a> is built using the Sphinx documentation toolchain, and a custom
-    theme that I have made.
-  </figcaption>
-</figure>
-
-<figure class="two-images">
-  <img src="/work/codescene-1.png" alt="CodeScene landing page">
-  <img src="/work/codescene-2.png" alt="CodeScene visualization">
-  <figcaption>I did a lot of UI work on <a href="https://codescene.io">codescene.io</a> at Empear.</figcaption>
-</figure>
-
-<figure>
-  <img src="/work/empear.com.png" alt="empear.com">
-  <figcaption>The <a href="http://www.empear.com">empear.com</a> site has a custom theme I made, using the static site generator Hugo.</figcaption>
-</figure>
