--- a/src/work.html
+++ b/src/work.html
@@ -6,6 +6,6 @@ title: "Work"
 <p>
 My strengths and interests are system design, testable and
 maintainable architectures, property-based and model-based testing
-techniques, functional programming, and technical documentation. You
-can <a href="https://wickstrom.tech/cv.pdf">download my CV here</a>.
+techniques, functional programming, and technical documentation and 
+writing. You can <a href="https://wickstrom.tech/cv.pdf">download my CV here</a>.
 </p>
