Fix index assets

--- a/src/head.html
+++ b/src/head.html
@@ -1,4 +1,4 @@
-<link rel="icon" type="image/png" href="/assets/icon.png">
+<link rel="icon" type="image/png" href="assets/icon.png">
 
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
