--- a/src/head.html
+++ b/src/head.html
@@ -6,5 +6,5 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Jetbrains+Mono:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap"
   rel="stylesheet">
