--- a/src/post-nav-after.html
+++ b/src/post-nav-after.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/feed.xml">Atom feed</a></li>
-        <li><a href="https://twitter.com/owickstrom">Twitter</a></li>
+        <li><a href="https://mastodon.social/@owi">Mastodon</a></li>
         <li><a href="https://wickstrom.tech/assets/cv.pdf">CV</a></li>
     </ul>
 </nav>
