--- a/src/post-nav-after.html
+++ b/src/post-nav-after.html
@@ -2,6 +2,8 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/feed.xml">Atom feed</a></li>
+        <li><a href="https://x.com/owickstrom">X</a></li>
+        <li><a href="https://bsky.app/profile/wickstrom.tech">Bluesky</a></li>
         <li><a href="https://mastodon.social/@owi">Mastodon</a></li>
         <li><a href="https://wickstrom.tech/assets/cv.pdf">CV</a></li>
     </ul>
