--- a/src/post-nav-after.html
+++ b/src/post-nav-after.html
@@ -8,3 +8,5 @@
         <li><a href="https://wickstrom.tech/assets/cv.pdf">CV</a></li>
     </ul>
 </nav>
+
+<script data-goatcounter="https://wickstrom.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
