--- a/src/head.html
+++ b/src/head.html
@@ -1,1 +1,2 @@
 <link rel="icon" type="image/png" href="assets/icon.png">
+<link rel="alternate" type="application/atom+xml" href="https://wickstrom.tech/feed.xml" />
