--- a/src/head.html
+++ b/src/head.html
@@ -1,2 +1,9 @@
 <link rel="icon" type="image/png" href="assets/icon.png">
 <link rel="alternate" type="application/atom+xml" href="https://wickstrom.tech/feed.xml" />
+<script>
+  window.addEventListener("load", () => {
+    document.body.querySelectorAll("math[display=block]").forEach(math => {
+      math.parentElement.style.overflowX = "auto";
+    });
+  });
+</script>
