--- a/src/post-nav-after.html
+++ b/src/post-nav-after.html
@@ -5,6 +5,7 @@
         <li><a href="https://x.com/owickstrom">X</a></li>
         <li><a href="https://bsky.app/profile/wickstrom.tech">Bluesky</a></li>
         <li><a href="https://mastodon.social/@owi">Mastodon</a></li>
+        <li><a href="https://www.linkedin.com/in/oskar-wickstrom/">LinkedIn</a></li>
         <li><a href="https://wickstrom.tech/assets/cv.pdf">CV</a></li>
     </ul>
 </nav>
